--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
 
-        <title>Retro Bowl | 3kh0</title>
+        <title>Retro Bowl | SoCoolGames</title>
 
         <style>
             body {
