--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <body>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
         <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="width: 100%; height: 100%"/>
-            <canvas id="canvas" width="1" height="1">
+            <canvas id="canvas" width="400" height="175" style="position: absolute; inset: 65% -50% -50% 50%; transform: translate(-50%, -50%);">
                      <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
