--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <style>
             body {
-              background: #0;
+              background: url(html5game/splash.png);
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -70,7 +70,7 @@
 
     <body>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
-        <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="width: 100%; height: 100%"/>
+        <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="width: 100%; height: 100%; display: none;"/>
             <canvas id="canvas" width="853" height="480">
                      <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
