--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <style>
             body {
               background: url(html5game/splash.png);
+                   background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
