--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                    background-position: center;
     background-repeat: no-repeat;
     background-color: black;
+                background-size: cover;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
