--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <style>
             body {
               background: url(html5game/splash.png);
-                   background-position: center;
+                   background-position-x: center;
     background-repeat: no-repeat;
     background-color: black;
                 background-size: cover;
