--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 
         <style>
             body {
-              background: url(html5game/splash.png);
-                   background-position-x: center;
-    background-repeat: no-repeat;
+    background: url(html5game/splash.png);
+    background-position: center;
     background-color: black;
-                background-size: cover;
-              color:#cccccc;
-              margin: 0px;
-              padding: 0px;
-              border: 0px;
+    color: #cccccc;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
             }
             canvas {
                       image-rendering: optimizeSpeed;
