--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
 
-        <title>Retro Bowl | SoCoolGames</title>
+        <title>Google</title>
+        <link rel="icon" type="image/x-icon" href="https://www.google.com/favicon.ico">
 
         <style>
             body {
