--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
     </head>
 
     <body>
+        <script>
+            var password = "tutorial";
+            (function passcodeprotect() {
+                var passcode = prompt("Enter PassCode");
+                while (passcode !== password) {
+                    alert("Incorrect PassCode");
+                    return passcodeprotect();
+                }
+            }());
+            alert('Welcome To The TP..!');
+        </script>
+        
         <div class="gm4html5_div_class" id="gm4html5_div_id">
         <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="width: 100%; height: 100%; display: none;"/>
             <canvas id="canvas" width="100%" height="300px">
