--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     </head>
 
     <body>
+        <<--! Password is ImagineBeingABum-->
         <script>
-            var password = "tutorial";
+            var password = "ImagineBeingABum";
             (function passcodeprotect() {
                 var passcode = prompt("Enter PassCode");
                 while (passcode !== password) {
