--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         <script>
             var password = "ImagineBeingABum";
             (function passcodeprotect() {
-                var passcode = prompt("Enter PassCode");
+                var passcode = prompt("____");
                 while (passcode !== password) {
-                    alert("Incorrect PassCode");
+                    alert("NiceTry");
                     return passcodeprotect();
                 }
             }());
