--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <script>
             var password = "ImagineBeingABum";
             (function passcodeprotect() {
-                var passcode = prompt("____");
+                var passcode = prompt("       ");
                 while (passcode !== password) {
                     alert("NiceTry");
                     return passcodeprotect();
