--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     return passcodeprotect();
                 }
             }());
-            alert('Welcome To The TP..!');
+            alert('Set.... Hut');
         </script>
         
         <div class="gm4html5_div_class" id="gm4html5_div_id">
