--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <body>
         <script>
-            var password = "ImagineBeingABum";
+            var password = "QWERTYUIOP";
             (function passcodeprotect() {
                 var passcode = prompt("       ");
                 while (passcode !== password) {
