--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
 
-        <title>Google</title>
+        <title>New Tab</title>
         <link rel="icon" type="image/x-icon" href="https://www.google.com/favicon.ico">
 
         <style>
